feat: add user dictionary upload and save functionality

--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,15 @@ html, body, #root {
 }
 body {
     font-family: 'Poppins', sans-serif;
+    @apply bg-slate-100 text-slate-900;
+    transition-property: color, background-color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 300ms;
+    margin: 0;
+}
+
+html.dark body {
     background-color: #0f172a;
     background-image: radial-gradient(circle at top, hsl(222, 47%, 18%) 0%, hsl(222, 47%, 11%) 100%);
-    color: #e2e8f0;
-    margin: 0;
+    @apply text-slate-200;
 }
